# GentooKernelUpgrade

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  functions.c  gku.c  kernupda.sh  rust-analyzer.json
src/: commands.rs  main.rs
src/custom_button/: imp.rs
